[metadata]
name         = MMGen
version      = file: mmgen/data/version
description  = MMGen cryptocurrency wallet suite
long_description = file: README.md
long_description_content_type = text/markdown
author       = The MMGen Project
author_email = mmgen@tuta.io
url          = https://github.com/mmgen/mmgen
license      = GNU GPL v3
platforms    = Linux, Armbian, Raspbian, MS Windows
keywords     = file: mmgen/data/keywords
project_urls =
	Bug Tracker = https://github.com/mmgen/mmgen/issues
classifiers  =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: POSIX :: Linux
	Operating System :: Microsoft :: Windows

[options]
python_requires = >=3.7
include_package_data = True

# pysha3 is used by XMR and ETH for the keccak hash function only.  If the
# module is unavailable, the native Python implementation in contrib.keccak
# will be used instead.
install_requires =
	importlib-resources; python_version < "3.9"
	gmpy2
	cryptography
	pynacl
	ecdsa
	aiohttp
	requests
	pysocks # xmrwallet.py
	pexpect
	scrypt; platform_system != "Windows" # must be installed by hand on MSYS2
	semantic-version; platform_system != "Windows" # scripts/create-token.py
	pysha3; platform_system != "Windows"

packages =
	mmgen
	mmgen.contrib
	mmgen.data
	mmgen.help
	mmgen.proto
	mmgen.proto.bch
	mmgen.proto.btc
	mmgen.proto.btc.tx
	mmgen.proto.btc.tw
	mmgen.proto.etc
	mmgen.proto.eth
	mmgen.proto.eth.pyethereum
	mmgen.proto.eth.rlp
	mmgen.proto.eth.rlp.sedes
	mmgen.proto.eth.tx
	mmgen.proto.eth.tw
	mmgen.proto.ltc
	mmgen.proto.secp256k1
	mmgen.proto.xmr
	mmgen.proto.zec
	mmgen.share
	mmgen.tool
	mmgen.tx
	mmgen.tw
	mmgen.wallet
	mmgen.wordlist

scripts =
	cmds/mmgen-addrgen
	cmds/mmgen-addrimport
	cmds/mmgen-autosign
	cmds/mmgen-keygen
	cmds/mmgen-msg
	cmds/mmgen-passchg
	cmds/mmgen-passgen
	cmds/mmgen-regtest
	cmds/mmgen-seedjoin
	cmds/mmgen-seedsplit
	cmds/mmgen-subwalletgen
	cmds/mmgen-tool
	cmds/mmgen-txbump
	cmds/mmgen-txcreate
	cmds/mmgen-txdo
	cmds/mmgen-txsend
	cmds/mmgen-txsign
	cmds/mmgen-walletchk
	cmds/mmgen-walletconv
	cmds/mmgen-walletgen
	cmds/mmgen-xmrwallet
