# MMGen Wallet, a terminal-based cryptocurrency wallet
# Copyright (C)2013-2024 The MMGen Project <mmgen@tuta.io>
# Licensed under the GNU General Public License, Version 3:
#   https://www.gnu.org/licenses
# Public project repositories:
#   https://github.com/mmgen/mmgen-wallet
#   https://gitlab.com/mmgen/mmgen-wallet

[metadata]
name         = mmgen-wallet
version      = file: mmgen/data/version
description  = MMGen cryptocurrency wallet suite
long_description = file: README.md
long_description_content_type = text/markdown
author       = The MMGen Project
author_email = mmgen@tuta.io
url          = https://github.com/mmgen/mmgen-wallet
license      = GNU GPL v3
platforms    = Linux, Armbian, Raspbian, MS Windows, MacOS
keywords     = file: mmgen/data/keywords
project_urls =
	Website = https://mmgen-wallet.cc
	Bug Tracker = https://github.com/mmgen/mmgen-wallet/issues
	Documentation = https://github.com/mmgen/mmgen-wallet/wiki
classifiers  =
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: POSIX :: Linux
	Operating System :: Microsoft :: Windows
	Operating System :: MacOS
	Environment :: Console
	Programming Language :: Python :: 3
	Programming Language :: C
	Framework :: AsyncIO
	Framework :: aiohttp
	Topic :: Office/Business :: Financial
	Topic :: Security :: Cryptography
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Utilities
	Topic :: Software Development :: User Interfaces
	Topic :: Software Development :: Testing
	Topic :: Software Development :: Testing :: Mocking
	Topic :: Software Development :: Testing :: Unit
	Intended Audience :: Developers
	Intended Audience :: End Users/Desktop
	Intended Audience :: Financial and Insurance Industry
	Intended Audience :: System Administrators
	Development Status :: 5 - Production/Stable

[options]
python_requires = >=3.9
include_package_data = True

install_requires =
	gmpy2
	cryptography
	pynacl
	ecdsa
	aiohttp
	requests
	pexpect
	scrypt; platform_system != "Windows" # must be installed by hand on MSYS2
	semantic-version; platform_system != "Windows" # scripts/create-token.py

packages =
	mmgen
	mmgen.altcoin
	mmgen.bip_hd
	mmgen.contrib
	mmgen.data
	mmgen.help
	mmgen.platform
	mmgen.platform.darwin
	mmgen.proto
	mmgen.proto.bch
	mmgen.proto.btc
	mmgen.proto.btc.tx
	mmgen.proto.btc.tw
	mmgen.proto.etc
	mmgen.proto.eth
	mmgen.proto.eth.pyethereum
	mmgen.proto.eth.rlp
	mmgen.proto.eth.rlp.sedes
	mmgen.proto.eth.tx
	mmgen.proto.eth.tw
	mmgen.proto.ltc
	mmgen.proto.secp256k1
	mmgen.proto.xmr
	mmgen.proto.zec
	mmgen.tool
	mmgen.tx
	mmgen.tw
	mmgen.wallet
	mmgen.wordlist
	mmgen.xmrwallet
	mmgen.xmrwallet.file
	mmgen.xmrwallet.ops

scripts =
	cmds/mmgen-addrgen
	cmds/mmgen-addrimport
	cmds/mmgen-autosign
	cmds/mmgen-keygen
	cmds/mmgen-msg
	cmds/mmgen-passchg
	cmds/mmgen-passgen
	cmds/mmgen-regtest
	cmds/mmgen-seedjoin
	cmds/mmgen-seedsplit
	cmds/mmgen-subwalletgen
	cmds/mmgen-tool
	cmds/mmgen-txbump
	cmds/mmgen-txcreate
	cmds/mmgen-txdo
	cmds/mmgen-txsend
	cmds/mmgen-txsign
	cmds/mmgen-walletchk
	cmds/mmgen-walletconv
	cmds/mmgen-walletgen
	cmds/mmgen-xmrwallet
