# MMGen Wallet, a terminal-based cryptocurrency wallet
# Copyright (C)2013-2025 The MMGen Project <mmgen@tuta.io>
# Licensed under the GNU General Public License, Version 3:
#   https://www.gnu.org/licenses
# Public project repositories:
#   https://github.com/mmgen/mmgen-wallet
#   https://gitlab.com/mmgen/mmgen-wallet

[metadata]
name         = mmgen-wallet
version      = file: mmgen/data/version
description  = MMGen cryptocurrency wallet suite
long_description = file: README.md
long_description_content_type = text/markdown
author       = The MMGen Project
author_email = mmgen@tuta.io
url          = https://github.com/mmgen/mmgen-wallet
license      = GNU GPL v3
platforms    = Linux, Armbian, Raspbian, MS Windows, MacOS
keywords     = file: mmgen/data/keywords
project_urls =
	Website = https://mmgen-wallet.cc
	Repository = https://github.com/mmgen/mmgen-wallet.git
	Documentation = https://github.com/mmgen/mmgen-wallet/wiki
	Changelog = https://github.com/mmgen/mmgen-wallet/commits/master
	Download = https://github.com/mmgen/mmgen-wallet/releases
	Issues = https://github.com/mmgen/mmgen-wallet/issues
	Github = https://github.com/mmgen/mmgen-wallet
	Gitlab = https://gitlab.com/mmgen/mmgen-wallet
	Reddit = https://www.reddit.com/user/mmgen-py
	Twitter = https://x.com/TheMMGenProject
	Keybase = https://keybase.io/mmgen
classifiers  =
	Operating System :: POSIX :: Linux
	Operating System :: Microsoft :: Windows
	Operating System :: MacOS
	Environment :: Console
	Programming Language :: Python :: 3
	Programming Language :: C
	Framework :: AsyncIO
	Framework :: aiohttp
	Topic :: Office/Business :: Financial
	Topic :: Security :: Cryptography
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Utilities
	Topic :: Software Development :: User Interfaces
	Topic :: Software Development :: Testing
	Topic :: Software Development :: Testing :: Mocking
	Topic :: Software Development :: Testing :: Unit
	Intended Audience :: Developers
	Intended Audience :: End Users/Desktop
	Intended Audience :: Financial and Insurance Industry
	Intended Audience :: System Administrators
	Development Status :: 5 - Production/Stable

[options]
python_requires = >=3.11
include_package_data = True

install_requires =
	gmpy2
	cryptography
	pynacl
	ecdsa
	aiohttp
	requests
	pexpect
	lxml
	scrypt
	semantic-version; platform_system != "Windows" # scripts/create-token.py

packages =
	mmgen
	mmgen.altcoin
	mmgen.bip_hd
	mmgen.contrib
	mmgen.data
	mmgen.help
	mmgen.platform
	mmgen.platform.darwin
	mmgen.proto
	mmgen.proto.bch
	mmgen.proto.btc
	mmgen.proto.btc.rpc
	mmgen.proto.btc.tx
	mmgen.proto.btc.tw
	mmgen.proto.cosmos
	mmgen.proto.cosmos.tx
	mmgen.proto.etc
	mmgen.proto.eth
	mmgen.proto.eth.pyethereum
	mmgen.proto.eth.rlp
	mmgen.proto.eth.rlp.sedes
	mmgen.proto.eth.rpc
	mmgen.proto.eth.tx
	mmgen.proto.eth.tw
	mmgen.proto.ltc
	mmgen.proto.rune
	mmgen.proto.rune.rpc
	mmgen.proto.rune.tw
	mmgen.proto.rune.tx
	mmgen.proto.secp256k1
	mmgen.proto.vm
	mmgen.proto.vm.tx
	mmgen.proto.xchain
	mmgen.proto.xmr
	mmgen.proto.xmr.tw
	mmgen.proto.xmr.tx
	mmgen.proto.zec
	mmgen.rpc
	mmgen.rpc.backends
	mmgen.swap
	mmgen.swap.proto
	mmgen.swap.proto.thorchain
	mmgen.tool
	mmgen.tx
	mmgen.tw
	mmgen.wallet
	mmgen.wordlist
	mmgen.xmrwallet
	mmgen.xmrwallet.file
	mmgen.xmrwallet.ops

scripts =
	cmds/mmgen-addrgen
	cmds/mmgen-addrimport
	cmds/mmgen-autosign
	cmds/mmgen-cli
	cmds/mmgen-keygen
	cmds/mmgen-msg
	cmds/mmgen-passchg
	cmds/mmgen-passgen
	cmds/mmgen-regtest
	cmds/mmgen-seedjoin
	cmds/mmgen-seedsplit
	cmds/mmgen-subwalletgen
	cmds/mmgen-swaptxcreate
	cmds/mmgen-swaptxdo
	cmds/mmgen-tool
	cmds/mmgen-txbump
	cmds/mmgen-txcreate
	cmds/mmgen-txdo
	cmds/mmgen-txsend
	cmds/mmgen-txsign
	cmds/mmgen-walletchk
	cmds/mmgen-walletconv
	cmds/mmgen-walletgen
	cmds/mmgen-xmrwallet
